syntax="proto3";
package Carrier;

message ReportLogin { 
	// imei
	string imei        = 1;

	// 设备IMSI
	string imsi        = 2;

	// 设备类型
	string device_type = 3;

	// 协议版本
	string protocol    = 4;

	// 时间
	// time 格式为YYMMDD-HHMMSS
	string time        = 5;
}
